# code-reviewer

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py
codereviewenv/: __init__.py  env.py  grader.py  models.py
codereviewenv/tasks/: __init__.py
scripts/: baseline_inference.py
server/: __init__.py  app.py  requirements.txt
tests/: test_api.py  test_env.py
