[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codereviewenv"
version = "0.1.0"
description = "OpenEnv environment for pull-request code review with deterministic grading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6,<3.0",
    "openai>=1.30,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["codereviewenv", "codereviewenv.tasks", "server"]
